i few adjustment on the margin to make it look good on mobile devices, also fixedthe border line on nav not dissapearing

--- a/Cream and Beige Aesthetic Shop/css-js/style.css
+++ b/Cream and Beige Aesthetic Shop/css-js/style.css
@@ -36,7 +36,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
+  position: absolute;
   z-index: 1;
 }
 
@@ -128,6 +128,7 @@ nav ul li a:active {
   min-height: 80vh;
   margin-top: 10px;
   margin-bottom: 10px;
+  overflow: none;
 }
 
 .home-banner-block {
@@ -360,12 +361,12 @@ nav ul li a:active {
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 900px) {
   .about-page-img-block {
     width: 150px;
     height: 150px;
     border-radius: 100%;
-    margin-bottom: 20px;
+    margin-top: 200px;
   }
 
   .about-page-img-block img {
@@ -386,6 +387,17 @@ nav ul li a:active {
 
   .about-page-main-content p {
     font-size: 0.9em;
+    margin-bottom: 30px;
+  }
+
+  .btn-position-about-page a {
+    padding: 10px 30px;
+    font-size: 0.8rem;
+    margin-bottom: 20px;
+  }
+
+  .btn-position-about-page {
+    margin-bottom: 20px;
   }
 }
 /* Course Page */
@@ -585,6 +597,7 @@ nav ul li a:active {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
   }
 
   .content-header-2 {
@@ -748,6 +761,7 @@ nav ul li a:active {
 @media (max-width: 1325px) {
   .shop-course-item-container {
     width: 100%;
+    margin-bottom: 20px;
   }
 }
 
@@ -761,6 +775,7 @@ nav ul li a:active {
   display: flex;
   align-items: center;
   padding-inline: 30px;
+  overflow: hidden;
 }
 
 .contact-header {
@@ -849,7 +864,7 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
   }
 
   .contact-header p {
@@ -872,5 +887,18 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 300px;
+    height: 30px;
+  }
+
+  textarea {
+    height: 120px;
+    resize: none;
   }
 }
